Added AudioManager singleton, got prototype audio assets working as desired, fixed icon scaling, and fixed physics body scaling.

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -123,6 +123,8 @@ CalculateNeutralInput = % > @, > Get < PlayerType, > Get GenericInput Neutral, R
 CalculateUpwardInput = % > @, > Get < PlayerType, > Get GenericInput Upward, Return "<<"
 CalculateDownwardInput = % > @, > Get < PlayerType, > Get GenericInput Downward, Return "<<"
 CalculateSuperInput = % > @, > Get < PlayerType, > Get GenericInput Super, Return "<<"
+CalculateBPShipTopLeft = % > @, > Get < UnscaledTopLeft, > @, > Get < ShipScale, > * < <, > @, Set < TopLeft <
+CalculateBPShipBottomRight = % > @, > Get < UnscaledBottomRight, > @, > Get < ShipScale, > * < <, > @, Set < BottomRight <
 
 ;These values are listed in the order in which they're to be drawn, but their numerical values may not reflect this because of the occasional usage of parent space.
 [Depths]
