--- a/data/config/Icon.ini
+++ b/data/config/Icon.ini
@@ -67,34 +67,42 @@ Depth = O-PilotIcon
 
 [O-Pilot1IconP1@O-PilotIcon]
 Graphic = G-Pilot1
+Scale = @O-Pilot1.Scale
 ChildList = O-Ship1IconP1
 
 [O-Pilot2IconP1@O-PilotIcon]
 Graphic = G-Pilot2
+Scale = @O-Pilot2.Scale
 ChildList = O-Ship2IconP1
 
 [O-Pilot3IconP1@O-PilotIcon]
 Graphic = G-Pilot3
+Scale = @O-Pilot3.Scale
 ChildList = O-Ship3IconP1
 
 [O-Pilot4IconP1@O-PilotIcon]
 Graphic = G-Pilot4
+Scale = @O-Pilot4.Scale
 ChildList = O-Ship4IconP1
 
 [O-Pilot5IconP1@O-PilotIcon]
 Graphic = G-Pilot5
+Scale = @O-Pilot5.Scale
 ChildList = O-Ship5IconP1
 
 [O-Pilot6IconP1@O-PilotIcon]
 Graphic = G-Pilot6
+Scale = @O-Pilot6.Scale
 ChildList = O-Ship6IconP1
 
 [O-Pilot7IconP1@O-PilotIcon]
 Graphic = G-Pilot7
+Scale = @O-Pilot7.Scale
 ChildList = O-Ship7IconP1
 
 [O-Pilot8IconP1@O-PilotIcon]
 Graphic = G-Pilot8
+Scale = @O-Pilot8.Scale
 ChildList = O-Ship8IconP1
 
 															;PILOT ICON DASH
@@ -205,27 +213,35 @@ Depth = O-ShipIcon
 
 [O-Ship1IconP1@O-ShipIcon]
 Graphic = G-Ship1
+Scale = @O-Ship1.Scale
 
 [O-Ship2IconP1@O-ShipIcon]
 Graphic = G-Ship2
+Scale = @O-Ship2.Scale
 
 [O-Ship3IconP1@O-ShipIcon]
 Graphic = G-Ship3
+Scale = @O-Ship3.Scale
 
 [O-Ship4IconP1@O-ShipIcon]
 Graphic = G-Ship4
+Scale = @O-Ship4.Scale
 
 [O-Ship5IconP1@O-ShipIcon]
 Graphic = G-Ship5
+Scale = @O-Ship5.Scale
 
 [O-Ship6IconP1@O-ShipIcon]
 Graphic = G-Ship6
+Scale = @O-Ship6.Scale
 
 [O-Ship7IconP1@O-ShipIcon]
 Graphic = G-Ship7
+Scale = @O-Ship7.Scale
 
 [O-Ship8IconP1@O-ShipIcon]
 Graphic = G-Ship8
+Scale = @O-Ship8.Scale
 
 															;SHIP ICON DASH
 
