--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -19,6 +19,8 @@ Type = box
 Solid = true
 SelfFlags = ship
 CheckMask = geometry
+TopLeft = @Commands.CalculateBPShipTopLeft
+BottomRight = @Commands.CalculateBPShipBottomRight
 
 															;SHIP P1
 
@@ -41,8 +43,10 @@ Scale = @O-Ship.ScaleMedium
 Texture = playerShip1_green.png
 
 [BP-Ship1@BP-Ship]
-TopLeft = (-37.5, -49.5)
-BottomRight = (37.5, 49.5)
+;User-Defined
+UnscaledTopLeft = (-37.5, -49.5)
+UnscaledBottomRight = (37.5, 49.5)
+ShipScale = @O-Ship1.Scale
 
 
 															;SHIP 1 P1
@@ -68,8 +72,10 @@ Scale = @O-Ship.ScaleMedium
 Texture = playerShip2_green.png
 
 [BP-Ship2@BP-Ship]
-TopLeft = (-37.5, -56)
-BottomRight = (37.5, 56)
+;User-Defined
+UnscaledTopLeft = (-37.5, -56)
+UnscaledBottomRight = (37.5, 56)
+ShipScale = @O-Ship2.Scale
 
 															;SHIP 2 P1
 
@@ -94,8 +100,10 @@ Scale = @O-Ship.ScaleLarge
 Texture = playerShip3_green.png
 
 [BP-Ship3@BP-Ship]
-TopLeft = (-37.5, -49)
-BottomRight = (37.5, 49)
+;User-Defined
+UnscaledTopLeft = (-37.5, -49)
+UnscaledBottomRight = (37.5, 49)
+ShipScale = @O-Ship3.Scale
 
 															;SHIP 3 P1
 
@@ -121,8 +129,10 @@ Texture = Enemies/enemyGreen1.png
 Flip = y
 
 [BP-Ship4@BP-Ship]
-TopLeft = (-42, -46.5)
-BottomRight = (42, 46.5)
+;User-Defined
+UnscaledTopLeft = (-42, -46.5)
+UnscaledBottomRight = (42, 46.5)
+ShipScale = @O-Ship4.Scale
 
 															;SHIP 4 P1
 
@@ -148,8 +158,10 @@ Texture = Enemies/enemyGreen2.png
 Flip = y
 
 [BP-Ship5@BP-Ship]
-TopLeft = (-42, -52)
-BottomRight = (42, 52)
+;User-Defined
+UnscaledTopLeft = (-42, -52)
+UnscaledBottomRight = (42, 52)
+ShipScale = @O-Ship5.Scale
 
 															;SHIP 5 P1
 
@@ -175,8 +187,10 @@ Texture = Enemies/enemyGreen3.png
 Flip = y
 
 [BP-Ship6@BP-Ship]
-TopLeft = (-42, -51.5)
-BottomRight = (42, 51.5)
+;User-Defined
+UnscaledTopLeft = (-42, -51.5)
+UnscaledBottomRight = (42, 51.5)
+ShipScale = @O-Ship6.Scale
 
 															;SHIP 6 P1
 
@@ -202,8 +216,10 @@ Texture = Enemies/enemyGreen4.png
 Flip = y
 
 [BP-Ship7@BP-Ship]
-TopLeft = (-42, -41)
-BottomRight = (42, 41)
+;User-Defined
+UnscaledTopLeft = (-42, -41)
+UnscaledBottomRight = (42, 41)
+ShipScale = @O-Ship7.Scale
 
 															;SHIP 7 P1
 
@@ -229,8 +245,10 @@ Texture = Enemies/enemyGreen5.png
 Flip = y
 
 [BP-Ship8@BP-Ship]
-TopLeft = (-42, -48.5)
-BottomRight = (42, 48.5)
+;User-Defined
+UnscaledTopLeft = (-42, -48.5)
+UnscaledBottomRight = (42, 48.5)
+ShipScale = @O-Ship8.Scale
 
 															;SHIP 8 P1
 
