Fixed orientation of P2 guns, and resolved bug in wallrun movement when using joysticks.

--- a/data/config/Spawner.ini
+++ b/data/config/Spawner.ini
@@ -680,23 +680,35 @@ Object = O-LaserRotatedP2
 
 															;NEUTRAL GUN
 
-[O-NeutralGun@O-Gun]
-Position = (0.0, -0.5, 0.0)
+[O-NeutralGunP1@O-Gun]
+Position = (0, -0.5, 0)
+
+[O-NeutralGunP2@O-Gun]
+Position = (0, 0.5, 0)
 
 															;UPWARD GUN
 
-[O-UpwardGun@O-Gun]
-Position = (-0.5, 0.0, 0.0)
+[O-UpwardGunP1@O-Gun]
+Position = (-0.5, 0, 0)
+
+[O-UpwardGunP2@O-Gun]
+Position = (-0.5, 0, 0)
 
 															;DOWNWARD GUN
 
-[O-DownwardGun@O-Gun]
-Position = (0.5, 0.0, 0.0)
+[O-DownwardGunP1@O-Gun]
+Position = (0.5, 0, 0)
+
+[O-DownwardGunP2@O-Gun]
+Position = (0.5, 0, 0)
 
 															;SUPER GUN
 
-[O-SuperGun@O-Gun]
-Position = (0.0, 0.0, 0.0)
+[O-SuperGunP1@O-Gun]
+Position = (0, 0, 0)
+
+[O-SuperGunP2@O-Gun]
+Position = (0, 0, 0)
 
 															;BEAM PLACER GUN
 															
@@ -842,326 +854,326 @@ Spawner = SP-SpacerLaser3P2
 
 															;NEUTRAL GUN 1 P1
 
-[O-NeutralGun1P1@O-NeutralGun]
+[O-NeutralGun1P1@O-NeutralGunP1]
 Spawner = SP-Neutral1P1
 
 															;UPWARD GUN 1 P1
 
-[O-UpwardGun1P1@O-UpwardGun]
+[O-UpwardGun1P1@O-UpwardGunP1]
 Spawner = SP-Upward1P1
 
 															;DOWNWARD GUN 1 P1
 
-[O-DownwardGun1P1@O-DownwardGun]
+[O-DownwardGun1P1@O-DownwardGunP1]
 Spawner = SP-Downward1P1
 
 															;SUPER GUN 1 P1
 
-[O-SuperGun1P1@O-SuperGun]
+[O-SuperGun1P1@O-SuperGunP1]
 Spawner = SP-Super1P1
 
 															;NEUTRAL GUN 1 P2
 
-[O-NeutralGun1P2@O-NeutralGun]
+[O-NeutralGun1P2@O-NeutralGunP2]
 Spawner = SP-Neutral1P2
 
 															;UPWARD GUN 1 P2
 
-[O-UpwardGun1P2@O-UpwardGun]
+[O-UpwardGun1P2@O-UpwardGunP2]
 Spawner = SP-Upward1P2
 
 															;DOWNWARD GUN 1 P2
 
-[O-DownwardGun1P2@O-DownwardGun]
+[O-DownwardGun1P2@O-DownwardGunP2]
 Spawner = SP-Downward1P2
 
 															;SUPER GUN 1 P2
 
-[O-SuperGun1P2@O-SuperGun]
+[O-SuperGun1P2@O-SuperGunP2]
 Spawner = SP-Super1P2
 
 															;NEUTRAL GUN 2 P1
 
-[O-NeutralGun2P1@O-NeutralGun]
+[O-NeutralGun2P1@O-NeutralGunP1]
 Spawner = SP-Neutral2P1
 
 															;UPWARD GUN 2 P1
 
-[O-UpwardGun2P1@O-UpwardGun]
+[O-UpwardGun2P1@O-UpwardGunP1]
 Spawner = SP-Upward2P1
 
 															;DOWNWARD GUN 2 P1
 
-[O-DownwardGun2P1@O-DownwardGun]
+[O-DownwardGun2P1@O-DownwardGunP1]
 Spawner = SP-Downward2P1
 
 															;SUPER GUN 2 P1
 
-[O-SuperGun2P1@O-SuperGun]
+[O-SuperGun2P1@O-SuperGunP1]
 Spawner = SP-Super2P1
 
 															;NEUTRAL GUN 2 P2
 
-[O-NeutralGun2P2@O-NeutralGun]
+[O-NeutralGun2P2@O-NeutralGunP2]
 Spawner = SP-Neutral2P2
 
 															;UPWARD GUN 2 P2
 
-[O-UpwardGun2P2@O-UpwardGun]
+[O-UpwardGun2P2@O-UpwardGunP2]
 Spawner = SP-Upward2P2
 
 															;DOWNWARD GUN 2 P2
 
-[O-DownwardGun2P2@O-DownwardGun]
+[O-DownwardGun2P2@O-DownwardGunP2]
 Spawner = SP-Downward2P2
 
 															;SUPER GUN 2 P2
 
-[O-SuperGun2P2@O-SuperGun]
+[O-SuperGun2P2@O-SuperGunP2]
 Spawner = SP-Super2P2
 
 															;NEUTRAL GUN 3 P1
 
-[O-NeutralGun3P1@O-NeutralGun]
+[O-NeutralGun3P1@O-NeutralGunP1]
 Position = (0.0, 0.5, 0.0)
 Spawner = SP-Neutral3P1
 
 															;UPWARD GUN 3 P1
 
-[O-UpwardGun3P1@O-UpwardGun]
+[O-UpwardGun3P1@O-UpwardGunP1]
 Spawner = SP-Upward3P1
 
 															;DOWNWARD GUN 3 P1
 
-[O-DownwardGun3P1@O-DownwardGun]
+[O-DownwardGun3P1@O-DownwardGunP1]
 Spawner = SP-Downward3P1
 
 															;SUPER GUN 3 P1
 
-[O-SuperGun3P1@O-SuperGun]
+[O-SuperGun3P1@O-SuperGunP1]
 Spawner = SP-Super3P1
 
 															;NEUTRAL GUN 3 P2
 
-[O-NeutralGun3P2@O-NeutralGun]
+[O-NeutralGun3P2@O-NeutralGunP2]
 Position = (0.0, 0.5, 0.0)
 Spawner = SP-Neutral3P2
 
 															;UPWARD GUN 3 P2
 
-[O-UpwardGun3P2@O-UpwardGun]
+[O-UpwardGun3P2@O-UpwardGunP2]
 Spawner = SP-Upward3P2
 
 															;DOWNWARD GUN 3 P2
 
-[O-DownwardGun3P2@O-DownwardGun]
+[O-DownwardGun3P2@O-DownwardGunP2]
 Spawner = SP-Downward3P2
 
 															;SUPER GUN 3 P2
 
-[O-SuperGun3P2@O-SuperGun]
+[O-SuperGun3P2@O-SuperGunP2]
 Spawner = SP-Super3P2
 
 															;NEUTRAL GUN 4 P1
 
-[O-NeutralGun4P1@O-NeutralGun]
+[O-NeutralGun4P1@O-NeutralGunP1]
 Spawner = SP-Neutral4P1
 
 															;UPWARD GUN 4 P1
 
-[O-UpwardGun4P1@O-UpwardGun]
+[O-UpwardGun4P1@O-UpwardGunP1]
 Spawner = SP-Upward4P1
 
 															;DOWNWARD GUN 4 P1
 
-[O-DownwardGun4P1@O-DownwardGun]
+[O-DownwardGun4P1@O-DownwardGunP1]
 Spawner = SP-Downward4P1
 
 															;SUPER GUN 4 P1
 
-[O-SuperGun4P1@O-SuperGun]
+[O-SuperGun4P1@O-SuperGunP1]
 Spawner = SP-Super4P1
 
 															;NEUTRAL GUN 4 P2
 
-[O-NeutralGun4P2@O-NeutralGun]
+[O-NeutralGun4P2@O-NeutralGunP2]
 Spawner = SP-Neutral4P2
 
 															;UPWARD GUN 4 P2
 
-[O-UpwardGun4P2@O-UpwardGun]
+[O-UpwardGun4P2@O-UpwardGunP2]
 Spawner = SP-Upward4P2
 
 															;DOWNWARD GUN 4 P2
 
-[O-DownwardGun4P2@O-DownwardGun]
+[O-DownwardGun4P2@O-DownwardGunP2]
 Spawner = SP-Downward4P2
 
 															;SUPER GUN 4 P2
 
-[O-SuperGun4P2@O-SuperGun]
+[O-SuperGun4P2@O-SuperGunP2]
 Spawner = SP-Super4P2
 
 															;NEUTRAL GUN 5 P1
 
-[O-NeutralGun5P1@O-NeutralGun]
+[O-NeutralGun5P1@O-NeutralGunP1]
 Spawner = SP-Neutral5P1
 
 															;UPWARD GUN 5 P1
 
-[O-UpwardGun5P1@O-UpwardGun]
+[O-UpwardGun5P1@O-UpwardGunP1]
 Spawner = SP-Upward5P1
 
 															;DOWNWARD GUN 5 P1
 
-[O-DownwardGun5P1@O-DownwardGun]
+[O-DownwardGun5P1@O-DownwardGunP1]
 Position = (0.0, 0.0, 0.0)
 Spawner = SP-Downward5P1
 
 															;SUPER GUN 5 P1
 
-[O-SuperGun5P1@O-SuperGun]
+[O-SuperGun5P1@O-SuperGunP1]
 Spawner = SP-Super5P1
 
 															;NEUTRAL GUN 5 P2
 
-[O-NeutralGun5P2@O-NeutralGun]
+[O-NeutralGun5P2@O-NeutralGunP2]
 Spawner = Neutral5P2
 
 															;UPWARD GUN 5 P2
 
-[O-UpwardGun5P2@O-UpwardGun]
+[O-UpwardGun5P2@O-UpwardGunP2]
 Spawner = Upward5P2
 
 															;DOWNWARD GUN 5 P2
 
-[O-DownwardGun5P2@O-DownwardGun]
+[O-DownwardGun5P2@O-DownwardGunP2]
 Position = (0.0, 0.0, 0.0)
 Spawner = SP-Downward5P2
 
 															;SUPER GUN 5 P2
 
-[O-SuperGun5P2@O-SuperGun]
+[O-SuperGun5P2@O-SuperGunP2]
 Spawner = SP-Super5P2
 
 															;NEUTRAL GUN 6 P1
 
-[O-NeutralGun6P1@O-NeutralGun]
+[O-NeutralGun6P1@O-NeutralGunP1]
 Spawner = SP-Neutral6P1
 
 															;UPWARD GUN 6 P1
 
-[O-UpwardGun6P1@O-UpwardGun]
+[O-UpwardGun6P1@O-UpwardGunP1]
 Spawner = SP-Upward6P1
 
 															;DOWNWARD GUN 6 P1
 
-[O-DownwardGun6P1@O-DownwardGun]
+[O-DownwardGun6P1@O-DownwardGunP1]
 Spawner = SP-Downward6P1
 
 															;SUPER GUN 6 P1
 
-[O-SuperGun6P1@O-SuperGun]
+[O-SuperGun6P1@O-SuperGunP1]
 Spawner = SP-Super6P1
 
 															;NEUTRAL GUN 6 P2
 
-[O-NeutralGun6P2@O-NeutralGun]
+[O-NeutralGun6P2@O-NeutralGunP2]
 Spawner = SP-Neutral6P2
 
 															;UPWARD GUN 6 P2
 
-[O-UpwardGun6P2@O-UpwardGun]
+[O-UpwardGun6P2@O-UpwardGunP2]
 Spawner = SP-Upward6P2
 
 															;DOWNWARD GUN 6 P2
 
-[O-DownwardGun6P2@O-DownwardGun]
+[O-DownwardGun6P2@O-DownwardGunP2]
 Spawner = SP-Downward6P2
 
 															;SUPER GUN 6 P2
 
-[O-SuperGun6P2@O-SuperGun]
+[O-SuperGun6P2@O-SuperGunP2]
 Spawner = SP-Super6P2
 
 															;NEUTRAL GUN 7 P1
 
-[O-NeutralGun7P1@O-NeutralGun]
+[O-NeutralGun7P1@O-NeutralGunP1]
 Spawner = SP-Neutral7P1
 
 															;UPWARD GUN 7 P1
 
-[O-UpwardGun7P1@O-UpwardGun]
+[O-UpwardGun7P1@O-UpwardGunP1]
 Spawner = SP-Upward7P1
 
 															;DOWNWARD GUN 7 P1
 
-[O-DownwardGun7P1@O-DownwardGun]
+[O-DownwardGun7P1@O-DownwardGunP1]
 Spawner = SP-Downward7P1
 
 															;SUPER GUN 7 P1
 
-[O-SuperGun7P1@O-SuperGun]
+[O-SuperGun7P1@O-SuperGunP1]
 Spawner = SP-Super7P1
 
 															;NEUTRAL GUN 7 P2
 
-[O-NeutralGun7P2@O-NeutralGun]
+[O-NeutralGun7P2@O-NeutralGunP2]
 Spawner = SP-Neutral7P2
 
 															;UPWARD GUN 7 P2
 
-[O-UpwardGun7P2@O-UpwardGun]
+[O-UpwardGun7P2@O-UpwardGunP2]
 Spawner = SP-Upward7P2
 
 															;DOWNWARD GUN 7 P2
 
-[O-DownwardGun7P2@O-DownwardGun]
+[O-DownwardGun7P2@O-DownwardGunP2]
 Spawner = SP-Downward7P2
 
 															;SUPER GUN 7 P2
 
-[O-SuperGun7P2@O-SuperGun]
+[O-SuperGun7P2@O-SuperGunP2]
 Spawner = SP-Super7P2
 
 															;NEUTRAL GUN 8 P1
 
-[O-NeutralGun8P1@O-NeutralGun]
+[O-NeutralGun8P1@O-NeutralGunP1]
 Spawner = SP-Neutral8P1
 
 															;UPWARD GUN 8 P1
 
-[O-UpwardGun8P1@O-UpwardGun]
+[O-UpwardGun8P1@O-UpwardGunP1]
 Spawner = SP-Upward8P1
 
 															;DOWNWARD GUN 8 P1
 
-[O-DownwardGun8P1@O-DownwardGun]
+[O-DownwardGun8P1@O-DownwardGunP1]
 Spawner = SP-Downward8P1
 
 															;SUPER GUN 8 P1
 
-[O-SuperGun8P1@O-SuperGun]
+[O-SuperGun8P1@O-SuperGunP1]
 Spawner = SP-Super8P1
 
 															;NEUTRAL GUN 8 P2
 
-[O-NeutralGun8P2@O-NeutralGun]
+[O-NeutralGun8P2@O-NeutralGunP2]
 Spawner = SP-Neutral8P2
 
 															;UPWARD GUN 8 P2
 
-[O-UpwardGun8P2@O-UpwardGun]
+[O-UpwardGun8P2@O-UpwardGunP2]
 Spawner = SP-Upward8P2
 
 															;DOWNWARD GUN 8 P2
 
-[O-DownwardGun8P2@O-DownwardGun]
+[O-DownwardGun8P2@O-DownwardGunP2]
 Spawner = SP-Downward8P2
 
 															;SUPER GUN 8 P2
 
-[O-SuperGun8P2@O-SuperGun]
+[O-SuperGun8P2@O-SuperGunP2]
 Spawner = SP-Super8P2
 
 															;TURRET GUN P1
