Made some headway in implementing UTAI skeleton.

--- a/data/config/AI.ini
+++ b/data/config/AI.ini
@@ -4,42 +4,20 @@
 
 [O-AgentPilot@O-Agent]
 
-;ACTION
+;CONTEXT
 
-[O-Action@O-ScrollMod]
+[O-Context@O-ScrollMod]
 
-[O-ActionMove@O-Action]
-ActionType = Move
+[O-ContextPilot@O-Context]
 
-[O-ActionJump@O-Action]
-ActionType = Jump
+[O-ContextPilotInShip@O-ContextPilot]
+ChildList = O-RCurvePilotMove # O-RCurvePilotActInShip
 
-[O-ActionFall@O-Action]
-ActionType = Fall
+[O-ContextPilotGrounded@O-ContextPilot]
+ChildList = O-RCurvePilotMove # O-RCurvePilotJump # O-RCurvePilotActGrounded
 
-[O-ActionDash@O-Action]
-ActionType = Dash
-
-[O-ActionParry@O-Action]
-ActionType = Parry
-
-[O-ActionMelee@O-Action]
-ActionType = Melee
-
-[O-ActionDownstab@O-Action]
-ActionType = Downstab
-
-[O-ActionFireNeutral@O-Action]
-ActionType = FireNeutral
-
-[O-ActionFireUpward@O-Action]
-ActionType = FireUpward
-
-[O-ActionFireDownward@O-Action]
-ActionType = FireDownward
-
-[O-ActionFireSuper@O-Action]
-ActionType = FireSuper
+[O-ContextPilotJumping@O-ContextPilot]
+ChildList = O-RCurvePilotMove # O-RCurvePilotFall # O-RCurvePilotActJumping
 
 ;RCURVE
 
@@ -47,52 +25,164 @@ ActionType = FireSuper
 
 [O-RCurvePilot@O-RCurve]
 
-[O-RCurvePilotMovement@O-RCurvePilot]
-ChildList = O-UBucketPilotMove # O-UBucketPilotJump # O-UBucketPilotFall
+[O-RCurvePilotMove@O-RCurvePilot]
+ChildList = O-UBucketPilotMove # O-UBucketPilotDontMove
 
-[O-RCurvePilotAction@O-RCurvePilot]
+[O-RCurvePilotJump@O-RCurvePilot]
+ChildList = O-UBucketPilotJump # O-UBucketPilotDontJump
+
+[O-RCurvePilotFall@O-RCurvePilot]
+ChildList = O-UBucketPilotFall # O-UBucketPilotDontFall
+
+[O-RCurvePilotActInShip@O-RCurvePilot]
+ChildList = O-UBucketPilotDash # 
+		    O-UBucketPilotParry #
+		    O-UBucketPilotFireNeutral # 
+		    O-UBucketPilotFireUpward # 
+		    O-UBucketPilotFireDownward #
+		    O-UBucketPilotFireSuper #
+			O-UBucketPilotDontAct
+
+[O-RCurvePilotActGrounded@O-RCurvePilot]
+ChildList = O-UBucketPilotDash # 
+		    O-UBucketPilotParry #
+		    O-UBucketPilotMelee # 
+			O-UBucketPilotDontAct
+
+[O-RCurvePilotActJumping@O-RCurvePilot]
 ChildList = O-UBucketPilotDash # 
 		    O-UBucketPilotParry #
 		    O-UBucketPilotMelee # 
 		    O-UBucketPilotDownstab # 
-		    O-UBucketPilotFireNeutral # 
-		    O-UBucketPilotFireUpward # 
-		    O-UBucketPilotFireDownward #
-		    O-UBucketPilotFireSuper
+			O-UBucketPilotDontAct
 
 ;UBUCKET
 
 [O-UBucket@O-ScrollMod]
 
-[O-UBucketPilotMove@O-UBucket]
-ChildList = O-ActionMove
+[O-UBucketPilot@O-UBucket]
 
-[O-UBucketPilotJump@O-UBucket]
-ChildList = O-ActionJump
+[O-UBucketPilotMove@O-UBucketPilot]
+ChildList = O-ActionPilotMove
 
-[O-UBucketPilotFall@O-UBucket]
-ChildList = O-ActionFall
+[O-UBucketPilotDontMove@O-UBucketPilot]
+ChildList = O-ActionPilotDontMove
 
-[O-UBucketPilotDash@O-UBucket]
-ChildList = O-ActionDash
+[O-UBucketPilotJump@O-UBucketPilot]
+ChildList = O-ActionPilotJump
 
-[O-UBucketPilotParry@O-UBucket]
-ChildList = O-ActionParry
+[O-UBucketPilotDontJump@O-UBucketPilot]
+ChildList = O-ActionPilotDontJump
 
-[O-UBucketPilotMelee@O-UBucket]
-ChildList = O-ActionMelee
+[O-UBucketPilotFall@O-UBucketPilot]
+ChildList = O-ActionPilotFall
 
-[O-UBucketPilotDownstab@O-UBucket]
-ChildList = O-ActionDownstab
+[O-UBucketPilotDontFall@O-UBucketPilot]
+ChildList = O-ActionPilotDontFall
 
-[O-UBucketPilotFireNeutral@O-UBucket]
-ChildList = O-ActionFireNeutral
+[O-UBucketPilotDash@O-UBucketPilot]
+ChildList = O-ActionPilotDash
 
-[O-UBucketPilotFireUpward@O-UBucket]
-ChildList = O-ActionFireUpward
+[O-UBucketPilotParry@O-UBucketPilot]
+ChildList = O-ActionPilotParry
 
-[O-UBucketPilotFireDownward@O-UBucket]
-ChildList = O-ActionFireDownward
+[O-UBucketPilotMelee@O-UBucketPilot]
+ChildList = O-ActionPilotMelee
 
-[O-UBucketPilotFireSuper@O-UBucket]
-ChildList = O-ActionFireSuper
+[O-UBucketPilotDownstab@O-UBucketPilot]
+ChildList = O-ActionPilotDownstab
+
+[O-UBucketPilotFireNeutral@O-UBucketPilot]
+ChildList = O-ActionPilotFireNeutral
+
+[O-UBucketPilotFireUpward@O-UBucketPilot]
+ChildList = O-ActionPilotFireUpward
+
+[O-UBucketPilotFireDownward@O-UBucketPilot]
+ChildList = O-ActionPilotFireDownward
+
+[O-UBucketPilotFireSuper@O-UBucketPilot]
+ChildList = O-ActionPilotFireSuper
+
+[O-UBucketPilotDontAct@O-UBucketPilot]
+ChildList = O-ActionPilotDontAct
+
+;ACTION
+
+[O-Action@O-ScrollMod]
+
+[O-ActionPilot@O-Action]
+
+[O-ActionPilotMove@O-ActionPilot]
+ActionType = Move
+Weight = 1
+
+[O-ActionPilotDontMove@O-ActionPilot]
+ActionType = DontMove
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotJump@O-ActionPilot]
+ActionType = Jump
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotDontJump@O-ActionPilot]
+ActionType = DontJump
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotFall@O-ActionPilot]
+ActionType = Fall
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotDontFall@O-ActionPilot]
+ActionType = DontFall
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotDash@O-ActionPilot]
+ActionType = Dash
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotParry@O-ActionPilot]
+ActionType = Parry
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotMelee@O-ActionPilot]
+ActionType = Melee
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotDownstab@O-ActionPilot]
+ActionType = Downstab
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotFireNeutral@O-ActionPilot]
+ActionType = FireNeutral
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotFireUpward@O-ActionPilot]
+ActionType = FireUpward
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotFireDownward@O-ActionPilot]
+ActionType = FireDownward
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotFireSuper@O-ActionPilot]
+ActionType = FireSuper
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotDontAct@O-ActionPilot]
+ActionType = DontAct
+Weight = 1
+Momentum = 1
