--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -128,7 +128,7 @@ TextureSize = (32, 32, 0)
 
 [O-Pilot1P1@O-Pilot1]
 Body = B-Pilot1P1
-ChildList = O-Ship1P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship1P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot1P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Ship1 # BP-Melee1P1 # BP-Downstab1P1
@@ -149,8 +149,8 @@ CheckMask = pilotP2
 
 [O-Pilot1P2@O-Pilot1]
 Body = B-Pilot1P2
-ChildList = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
-IsAutomated = true
+ChildList = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
+;IsAutomated = true
 
 [B-Pilot1P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Ship1 # BP-Melee1P2 # BP-Downstab1P2
@@ -208,7 +208,7 @@ TextureSize = (32, 32, 0)
 
 [O-Pilot2P1@O-Pilot2]
 Body = B-Pilot2P1
-ChildList = O-Ship2P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship2P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot2P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Ship2 # BP-Melee2P1 # BP-Downstab2P1
@@ -229,7 +229,7 @@ CheckMask = pilotP2
 
 [O-Pilot2P2@O-Pilot2]
 Body = B-Pilot2P2
-ChildList = O-Ship2P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship2P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot2P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Ship2 # BP-Melee2P2 # BP-Downstab2P2
@@ -287,7 +287,7 @@ TextureSize = (32, 32, 0)
 
 [O-Pilot3P1@O-Pilot3]
 Body = B-Pilot3P1
-ChildList = O-Ship3P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship3P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot3P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Ship3 # BP-Melee3P1 # BP-Downstab3P1
@@ -308,7 +308,7 @@ CheckMask = pilotP2
 
 [O-Pilot3P2@O-Pilot3]
 Body = B-Pilot3P2
-ChildList = O-Ship3P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship3P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot3P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Ship3 # BP-Melee3P2 # BP-Downstab3P2
@@ -366,7 +366,7 @@ TextureSize = (32, 32, 0)
 
 [O-Pilot4P1@O-Pilot4]
 Body = B-Pilot4P1
-ChildList = O-Ship4P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship4P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot4P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Ship4 # BP-Melee4P1 # BP-Downstab4P1
@@ -387,7 +387,7 @@ CheckMask = pilotP2
 
 [O-Pilot4P2@O-Pilot4]
 Body = B-Pilot4P2
-ChildList = O-Ship4P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship4P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot4P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Ship4 # BP-Melee4P2 # BP-Downstab4P2
@@ -446,7 +446,7 @@ TextureSize = (32, 32, 0)
 
 [O-Pilot5P1@O-Pilot5]
 Body = B-Pilot5P1
-ChildList = O-Ship5P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship5P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot5P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Ship5 # BP-Melee5P1 # BP-Downstab5P1
@@ -467,7 +467,7 @@ CheckMask = pilotP2
 
 [O-Pilot5P2@O-Pilot5]
 Body = B-Pilot5P2
-ChildList = O-Ship5P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship5P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot5P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Ship5 # BP-Melee5P2 # BP-Downstab5P2
@@ -526,7 +526,7 @@ TextureSize = (32, 32, 0)
 
 [O-Pilot6P1@O-Pilot6]
 Body = B-Pilot6P1
-ChildList = O-Ship6P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship6P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot6P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Ship6 # BP-Melee6P1 # BP-Downstab6P1
@@ -547,7 +547,7 @@ CheckMask = pilotP2
 
 [O-Pilot6P2@O-Pilot6]
 Body = B-Pilot6P2
-ChildList = O-Ship6P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship6P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot6P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Ship6 # BP-Melee6P2 # BP-Downstab6P2
@@ -605,7 +605,7 @@ TextureSize = (32, 32, 0)
 
 [O-Pilot7P1@O-Pilot7]
 Body = B-Pilot7P1
-ChildList = O-Ship7P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship7P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot7P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Ship7 # BP-Melee7P1 # BP-Downstab7P1
@@ -626,7 +626,7 @@ CheckMask = pilotP2
 
 [O-Pilot7P2@O-Pilot7]
 Body = B-Pilot7P2
-ChildList = O-Ship7P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship7P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot7P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Ship7 # BP-Melee7P2 # BP-Downstab7P2
@@ -684,7 +684,7 @@ TextureSize = (32, 32, 0)
 
 [O-Pilot8P1@O-Pilot8]
 Body = B-Pilot8P1
-ChildList = O-Ship8P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship8P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot8P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Ship8 # BP-Melee8P1 # BP-Downstab8P1
@@ -705,7 +705,7 @@ CheckMask = pilotP2
 
 [O-Pilot8P2@O-Pilot8]
 Body = B-Pilot8P2
-ChildList = O-Ship8P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-RCurvePilotMovement # O-RCurvePilotAction
+ChildList = O-Ship8P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
 
 [B-Pilot8P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Ship8 # BP-Melee8P2 # BP-Downstab8P2
