Made large strides towards implementing UTAI

--- a/data/config/AI.ini
+++ b/data/config/AI.ini
@@ -26,7 +26,7 @@ ChildList = O-RCurvePilotMove # O-RCurvePilotFall # O-RCurvePilotActJumping
 [O-RCurvePilot@O-RCurve]
 
 [O-RCurvePilotMove@O-RCurvePilot]
-ChildList = O-UBucketPilotMove # O-UBucketPilotDontMove
+ChildList = O-UBucketPilotMoveAggressively # O-UBucketPilotMoveDefensively # O-UBucketPilotDontMove
 
 [O-RCurvePilotJump@O-RCurvePilot]
 ChildList = O-UBucketPilotJump # O-UBucketPilotDontJump
@@ -35,7 +35,8 @@ ChildList = O-UBucketPilotJump # O-UBucketPilotDontJump
 ChildList = O-UBucketPilotFall # O-UBucketPilotDontFall
 
 [O-RCurvePilotActInShip@O-RCurvePilot]
-ChildList = O-UBucketPilotDash # 
+ChildList = O-UBucketPilotDashAggressively # 
+			O-UBucketPilotDashDefensively #
 		    O-UBucketPilotParry #
 		    O-UBucketPilotFireNeutral # 
 		    O-UBucketPilotFireUpward # 
@@ -44,13 +45,15 @@ ChildList = O-UBucketPilotDash #
 			O-UBucketPilotDontAct
 
 [O-RCurvePilotActGrounded@O-RCurvePilot]
-ChildList = O-UBucketPilotDash # 
+ChildList = O-UBucketPilotDashAggressively # 
+			O-UBucketPilotDashDefensively #
 		    O-UBucketPilotParry #
 		    O-UBucketPilotMelee # 
 			O-UBucketPilotDontAct
 
 [O-RCurvePilotActJumping@O-RCurvePilot]
-ChildList = O-UBucketPilotDash # 
+ChildList = O-UBucketPilotDashAggressively # 
+			O-UBucketPilotDashDefensively #
 		    O-UBucketPilotParry #
 		    O-UBucketPilotMelee # 
 		    O-UBucketPilotDownstab # 
@@ -62,8 +65,11 @@ ChildList = O-UBucketPilotDash #
 
 [O-UBucketPilot@O-UBucket]
 
-[O-UBucketPilotMove@O-UBucketPilot]
-ChildList = O-ActionPilotMove
+[O-UBucketPilotMoveAggressively@O-UBucketPilot]
+ChildList = O-ActionPilotMoveAggressively
+
+[O-UBucketPilotMoveDefensively@O-UBucketPilot]
+ChildList = O-ActionPilotMoveDefensively
 
 [O-UBucketPilotDontMove@O-UBucketPilot]
 ChildList = O-ActionPilotDontMove
@@ -80,8 +86,11 @@ ChildList = O-ActionPilotFall
 [O-UBucketPilotDontFall@O-UBucketPilot]
 ChildList = O-ActionPilotDontFall
 
-[O-UBucketPilotDash@O-UBucketPilot]
-ChildList = O-ActionPilotDash
+[O-UBucketPilotDashAggressively@O-UBucketPilot]
+ChildList = O-ActionPilotDashAggressively
+
+[O-UBucketPilotDashDefensively@O-UBucketPilot]
+ChildList = O-ActionPilotDashDefensively
 
 [O-UBucketPilotParry@O-UBucketPilot]
 ChildList = O-ActionPilotParry
@@ -113,76 +122,95 @@ ChildList = O-ActionPilotDontAct
 
 [O-ActionPilot@O-Action]
 
-[O-ActionPilotMove@O-ActionPilot]
-ActionType = Move
+[O-ActionPilotMoveAggressively@O-ActionPilot]
 Weight = 1
+Momentum = 1
+
+[O-ActionPilotMoveDefensively@O-ActionPilot]
+Weight = 1
+Momentum = 1
 
 [O-ActionPilotDontMove@O-ActionPilot]
-ActionType = DontMove
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotJump@O-ActionPilot]
-ActionType = Jump
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotDontJump@O-ActionPilot]
-ActionType = DontJump
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotFall@O-ActionPilot]
-ActionType = Fall
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotDontFall@O-ActionPilot]
-ActionType = DontFall
 Weight = 1
 Momentum = 1
 
-[O-ActionPilotDash@O-ActionPilot]
-ActionType = Dash
+[O-ActionPilotDashAggressively@O-ActionPilot]
+Weight = 1
+Momentum = 1
+
+[O-ActionPilotDashDefensively@O-ActionPilot]
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotParry@O-ActionPilot]
-ActionType = Parry
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotMelee@O-ActionPilot]
-ActionType = Melee
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotDownstab@O-ActionPilot]
-ActionType = Downstab
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotFireNeutral@O-ActionPilot]
-ActionType = FireNeutral
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotFireUpward@O-ActionPilot]
-ActionType = FireUpward
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotFireDownward@O-ActionPilot]
-ActionType = FireDownward
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotFireSuper@O-ActionPilot]
-ActionType = FireSuper
 Weight = 1
 Momentum = 1
 
 [O-ActionPilotDontAct@O-ActionPilot]
-ActionType = DontAct
 Weight = 1
 Momentum = 1
+
+;ACTION TYPE
+
+[O-ActionType]
+;Movement actions.
+O-ActionPilotMoveAggressively = 0
+O-ActionPilotMoveDefensively = 1
+O-ActionPilotDontMove = 2
+;Jump actions.
+O-ActionPilotJump = 3
+O-ActionPilotDontJump = 4
+;Fall actions
+O-ActionPilotFall = 5
+O-ActionPilotDontFall = 6
+;Other actions.
+O-ActionPilotDashAggressively = 7
+O-ActionPilotDashDefensively = 8
+O-ActionPilotParry = 9
+O-ActionPilotMelee = 10
+O-ActionPilotDownstab = 11
+O-ActionPilotFireNeutral = 12
+O-ActionPilotFireUpward = 13
+O-ActionPilotFireDownward = 14
+O-ActionPilotFireSuper = 15
+O-ActionPilotDontAct = 15
