--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -150,7 +150,7 @@ CheckMask = pilotP2
 [O-Pilot1P2@O-Pilot1]
 Body = B-Pilot1P2
 ChildList = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon # O-ContextPilotInShip # O-ContextPilotGrounded # O-ContextPilotJumping
-;IsAutomated = true
+IsAutomated = true
 
 [B-Pilot1P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Ship1 # BP-Melee1P2 # BP-Downstab1P2
