Refactored the way in which action scoring works

--- a/data/config/AI.ini
+++ b/data/config/AI.ini
@@ -125,70 +125,138 @@ ChildList = O-ActionPilotDontAct
 [O-ActionPilotMoveAggressively@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = NumLives #
+		  IFrames #
+		  ContaminationTimer #
+		  ConstructionTimer #
+		  NumProjectiles #
+		  PartitionDistanceX #
+		  MostPressingProjectileDistance #
+		  NumOpposingProjectiles #
+		  RemainingMatchTime
 
 [O-ActionPilotMoveDefensively@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = NumLives #
+		  IFrames #
+		  ContaminationTimer #
+		  ConstructionTimer #
+		  NumProjectiles #
+		  PartitionDistanceX #
+		  MostPressingProjectileDistance #
+		  NumOpposingProjectiles #
+		  RemainingMatchTime
 
 [O-ActionPilotDontMove@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = ContaminationTimer #
+		  ConstructionTimer #
+		  MostPressingProjectileDistance #
+		  RemainingMatchTime
 
 [O-ActionPilotJump@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = OpposingPilotDistance #
+		  MostPressingProjectileDistance
 
 [O-ActionPilotDontJump@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = OpposingPilotDistance #
+		  MostPressingProjectileDistance
 
 [O-ActionPilotFall@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = OpposingPilotDistance #
+		  MostPressingProjectileDistance
 
 [O-ActionPilotDontFall@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = OpposingPilotDistance #
+		  MostPressingProjectileDistance
 
 [O-ActionPilotDashAggressively@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = NumLives #
+		  IFrames #
+		  ContaminationTimer #
+		  ConstructionTimer #
+		  NumProjectiles #
+		  PartitionDistanceX #
+		  MostPressingProjectileDistance #
+		  NumOpposingProjectiles #
+		  RemainingMatchTime
 
 [O-ActionPilotDashDefensively@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = NumLives #
+		  IFrames #
+		  ContaminationTimer #
+		  ConstructionTimer #
+		  NumProjectiles #
+		  PartitionDistanceX #
+		  MostPressingProjectileDistance #
+		  NumOpposingProjectiles #
+		  RemainingMatchTime
 
 [O-ActionPilotParry@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = NumLives #
+		  IFrames #
+		  MostPressingProjectileDistance
 
 [O-ActionPilotMelee@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = NumLives #
+		  IFrames #
+		  OpposingPilotDistance
 
 [O-ActionPilotDownstab@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = NumLives #
+		  IFrames #
+		  MostPressingProjectileDistance #
+		  NumOpposingProjectiles
 
 [O-ActionPilotFireNeutral@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = OpposingPilotDistanceX #
+		  OpposingPilotDistanceY
 
 [O-ActionPilotFireUpward@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = OpposingPilotDistanceX #
+		  OpposingPilotDistanceY
 
 [O-ActionPilotFireDownward@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = OpposingPilotDistanceX #
+		  OpposingPilotDistanceY
 
 [O-ActionPilotFireSuper@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = OpposingPilotDistance
 
 [O-ActionPilotDontAct@O-ActionPilot]
 Weight = 1
 Momentum = 1
+Factors = MostPressingProjectileDistance #
+		  OpposingPilotDistance #
+		  NumOpposingProjectiles
 
 ;ACTION TYPE
 
@@ -213,4 +281,20 @@ O-ActionPilotFireNeutral = 12
 O-ActionPilotFireUpward = 13
 O-ActionPilotFireDownward = 14
 O-ActionPilotFireSuper = 15
-O-ActionPilotDontAct = 15
+O-ActionPilotDontAct = 16
+
+;FACTOR
+
+[O-Factor]
+NumLives = 0
+IFrames = 1
+ContaminationTimer = 2
+ConstructionTimer = 3
+NumProjectiles = 4
+PartitionDistanceX = 5
+MostPressingProjectileDistance = 6
+OpposingPilotDistance = 7
+OpposingPilotDistanceX = 8
+OpposingPilotDistanceY = 9
+NumOpposingProjectiles = 10
+RemainingMatchTime = 11
