Assigned more appropriate utility functions to action and factor pairs.

--- a/data/config/AI.ini
+++ b/data/config/AI.ini
@@ -286,15 +286,18 @@ O-ActionPilotDontAct = 16
 ;FACTOR
 
 [O-Factor]
+;Self factors
 NumLives = 0
 IFrames = 1
 ContaminationTimer = 2
 ConstructionTimer = 3
 NumProjectiles = 4
+;Self and other factors
 PartitionDistanceX = 5
 MostPressingProjectileDistance = 6
 OpposingPilotDistance = 7
 OpposingPilotDistanceX = 8
 OpposingPilotDistanceY = 9
+;Other factors
 NumOpposingProjectiles = 10
 RemainingMatchTime = 11
