Fixed AI jumping behavior.

--- a/data/config/AI.ini
+++ b/data/config/AI.ini
@@ -27,12 +27,18 @@ ChildList = O-RCurvePilotMove # O-RCurvePilotFall # O-RCurvePilotActJumping
 
 [O-RCurvePilotMove@O-RCurvePilot]
 ChildList = O-UBucketPilotMoveAggressively # O-UBucketPilotMoveDefensively # O-UBucketPilotDontMove
+;User-Defined
+CalculationInterval = 0.25
 
 [O-RCurvePilotJump@O-RCurvePilot]
 ChildList = O-UBucketPilotJump # O-UBucketPilotDontJump
+;User-Defined
+CalculationInterval = 0.25
 
 [O-RCurvePilotFall@O-RCurvePilot]
 ChildList = O-UBucketPilotFall # O-UBucketPilotDontFall
+;User-Defined
+CalculationInterval = 0.25
 
 [O-RCurvePilotActInShip@O-RCurvePilot]
 ChildList = O-UBucketPilotDashAggressively # 
@@ -43,6 +49,8 @@ ChildList = O-UBucketPilotDashAggressively #
 		    O-UBucketPilotFireDownward #
 		    O-UBucketPilotFireSuper #
 			O-UBucketPilotDontAct
+;User-Defined
+CalculationInterval = 0.25
 
 [O-RCurvePilotActGrounded@O-RCurvePilot]
 ChildList = O-UBucketPilotDashAggressively # 
@@ -50,6 +58,8 @@ ChildList = O-UBucketPilotDashAggressively #
 		    O-UBucketPilotParry #
 		    O-UBucketPilotMelee # 
 			O-UBucketPilotDontAct
+;User-Defined
+CalculationInterval = 0.25
 
 [O-RCurvePilotActJumping@O-RCurvePilot]
 ChildList = O-UBucketPilotDashAggressively # 
@@ -58,6 +68,8 @@ ChildList = O-UBucketPilotDashAggressively #
 		    O-UBucketPilotMelee # 
 		    O-UBucketPilotDownstab # 
 			O-UBucketPilotDontAct
+;User-Defined
+CalculationInterval = 0.25
 
 ;UBUCKET
 
@@ -225,7 +237,7 @@ Weight = 1
 Momentum = 1
 Factors = NumLives #
 		  IFrames #
-		  MostPressingProjectileDistance #
+		  OpposingPilotDistance #
 		  NumOpposingProjectiles
 
 [O-ActionPilotFireNeutral@O-ActionPilot]
